Fix navbrand link

--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Angular + Webpack Seed</a>
+      <a class="navbar-brand" ui-sref="app.home">Angular + Webpack Seed</a>
     </div>
 
     <div class="collapse navbar-collapse" ng-class="{'in': $ctrl.toggleMenu}">
